--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-svg": "^16.1.31",
+    "recharts": "^2.10.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
