--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^11.1.7",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
