--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "postcss": "^8",
     "prisma": "^5.7.0",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-bg-patterns": "^0.3.0",
     "typescript": "^5"
   }
 }
